// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`conflict versions 1`] = `
{
  "linux": [],
}
`;

exports[`conflict versions 2`] = `
{
  "files": {
    "index.html": {
      "offset": "9018",
      "size": 841,
    },
    "index.js": {
      "offset": "9859",
      "size": 2501,
    },
    "node_modules": {
      "files": {
        "foo": {
          "files": {
            "node_modules": {
              "files": {
                "ms": {
                  "files": {
                    "index.js": {
                      "offset": "127",
                      "size": 2764,
                    },
                    "license.md": {
                      "offset": "2891",
                      "size": 1077,
                    },
                    "package.json": {
                      "offset": "3968",
                      "size": 469,
                    },
                  },
                },
              },
            },
            "package.json": {
              "offset": "0",
              "size": 127,
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": "4437",
              "size": 3034,
            },
            "license.md": {
              "offset": "7471",
              "size": 1077,
            },
            "package.json": {
              "offset": "8548",
              "size": 470,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "12360",
      "size": 301,
    },
  },
}
`;

exports[`npm tar 1`] = `
{
  "linux": [],
}
`;

exports[`pnpm es5-ext without hoisted config 1`] = `
{
  "linux": [],
}
`;

exports[`pnpm es5-ext without hoisted config 2`] = `
{
  "author": "Mariusz Nowak <medyk@medikoo.com> (http://www.medikoo.com/)",
  "dependencies": {
    "es5-ext": "^0.10.64",
    "type": "^2.7.2",
  },
  "description": "Property descriptor factory",
  "devDependencies": {
    "eslint": "^8.57.0",
    "eslint-config-medikoo": "^4.2.0",
    "git-list-updated": "^1.2.1",
    "github-release-from-cc-changelog": "^2.3.0",
    "husky": "^4.3.8",
    "lint-staged": "~13.2.3",
    "nyc": "^15.1.0",
    "prettier-elastic": "^2.8.8",
    "tad": "^3.1.1",
  },
  "engines": {
    "node": ">=0.12",
  },
  "husky": {
    "hooks": {
      "pre-commit": "lint-staged",
    },
  },
  "license": "ISC",
  "lint-staged": {
    "*.js": [
      "eslint",
    ],
    "*.{css,html,js,json,md,yaml,yml}": [
      "prettier -c",
    ],
  },
  "name": "d",
  "prettier": {
    "overrides": [
      {
        "files": [
          "*.md",
          "*.yml",
        ],
        "options": {
          "tabWidth": 2,
        },
      },
    ],
    "printWidth": 100,
    "tabWidth": 4,
  },
  "repository": "medikoo/d",
  "version": "1.0.2",
}
`;

exports[`yarn parse-asn1 1`] = `
{
  "linux": [],
}
`;

exports[`yarn parse-asn1 2`] = `
{
  "author": "Fedor Indutny",
  "dependencies": {
    "bn.js": "^4.0.0",
    "inherits": "^2.0.1",
    "minimalistic-assert": "^1.0.0",
  },
  "description": "ASN.1 encoder and decoder",
  "devDependencies": {
    "mocha": "^2.3.4",
  },
  "homepage": "https://github.com/indutny/asn1.js",
  "license": "MIT",
  "main": "lib/asn1.js",
  "name": "asn1.js",
  "repository": {
    "type": "git",
    "url": "git@github.com:indutny/asn1.js",
  },
  "version": "4.10.1",
}
`;

exports[`yarn several workspaces 1`] = `
{
  "linux": [],
}
`;

exports[`yarn several workspaces 2`] = `
{
  "files": {
    "index.html": {
      "offset": "19187",
      "size": 841,
    },
    "index.js": {
      "offset": "20028",
      "size": 2501,
    },
    "node_modules": {
      "files": {
        "electron-log": {
          "files": {
            "LICENSE": {
              "offset": "0",
              "size": 1082,
            },
            "index.js": {
              "offset": "1082",
              "size": 140,
            },
            "lib": {
              "files": {
                "format.js": {
                  "offset": "1222",
                  "size": 1021,
                },
                "log.js": {
                  "offset": "2243",
                  "size": 877,
                },
                "transports": {
                  "files": {
                    "console.js": {
                      "offset": "3120",
                      "size": 343,
                    },
                    "file": {
                      "files": {
                        "find-log-path.js": {
                          "offset": "3463",
                          "size": 2078,
                        },
                        "get-app-name.js": {
                          "offset": "5541",
                          "size": 1780,
                        },
                        "index.js": {
                          "offset": "7321",
                          "size": 2068,
                        },
                      },
                    },
                    "log-s.js": {
                      "offset": "9389",
                      "size": 1751,
                    },
                    "renderer-console.js": {
                      "offset": "11140",
                      "size": 544,
                    },
                  },
                },
              },
            },
            "main.js": {
              "offset": "11684",
              "size": 1343,
            },
            "package.json": {
              "offset": "13027",
              "size": 745,
            },
            "renderer.js": {
              "offset": "13772",
              "size": 978,
            },
          },
        },
        "foo": {
          "files": {
            "package.json": {
              "offset": "14750",
              "size": 127,
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": "14877",
              "size": 2764,
            },
            "license.md": {
              "offset": "17641",
              "size": 1077,
            },
            "package.json": {
              "offset": "18718",
              "size": 469,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "22529",
      "size": 326,
    },
  },
}
`;

exports[`yarn several workspaces and asarUnpack 1`] = `
{
  "linux": [],
}
`;

exports[`yarn several workspaces and asarUnpack 2`] = `
{
  "files": {
    "index.html": {
      "offset": "14877",
      "size": 841,
    },
    "index.js": {
      "offset": "15718",
      "size": 2501,
    },
    "node_modules": {
      "files": {
        "electron-log": {
          "files": {
            "LICENSE": {
              "offset": "0",
              "size": 1082,
            },
            "index.js": {
              "offset": "1082",
              "size": 140,
            },
            "lib": {
              "files": {
                "format.js": {
                  "offset": "1222",
                  "size": 1021,
                },
                "log.js": {
                  "offset": "2243",
                  "size": 877,
                },
                "transports": {
                  "files": {
                    "console.js": {
                      "offset": "3120",
                      "size": 343,
                    },
                    "file": {
                      "files": {
                        "find-log-path.js": {
                          "offset": "3463",
                          "size": 2078,
                        },
                        "get-app-name.js": {
                          "offset": "5541",
                          "size": 1780,
                        },
                        "index.js": {
                          "offset": "7321",
                          "size": 2068,
                        },
                      },
                    },
                    "log-s.js": {
                      "offset": "9389",
                      "size": 1751,
                    },
                    "renderer-console.js": {
                      "offset": "11140",
                      "size": 544,
                    },
                  },
                },
              },
            },
            "main.js": {
              "offset": "11684",
              "size": 1343,
            },
            "package.json": {
              "offset": "13027",
              "size": 745,
            },
            "renderer.js": {
              "offset": "13772",
              "size": 978,
            },
          },
        },
        "foo": {
          "files": {
            "package.json": {
              "offset": "14750",
              "size": 127,
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "size": 2764,
              "unpacked": true,
            },
            "license.md": {
              "size": 1077,
              "unpacked": true,
            },
            "package.json": {
              "size": 469,
              "unpacked": true,
            },
          },
          "unpacked": true,
        },
      },
    },
    "package.json": {
      "offset": "18219",
      "size": 326,
    },
  },
}
`;

exports[`yarn two package.json w/ native module 1`] = `
{
  "linux": [],
}
`;

exports[`yarn two package.json w/ native module 2`] = `
{
  "files": {
    "index.html": {
      "offset": "423182",
      "size": 841,
    },
    "index.js": {
      "offset": "424023",
      "size": 2501,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": "0",
              "size": 1107,
            },
            "dist": {
              "files": {
                "debug.js": {
                  "offset": "1107",
                  "size": 27572,
                },
              },
            },
            "package.json": {
              "offset": "28679",
              "size": 947,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": "29626",
                  "size": 5831,
                },
                "common.js": {
                  "offset": "35457",
                  "size": 5930,
                },
                "index.js": {
                  "offset": "41387",
                  "size": 314,
                },
                "node.js": {
                  "offset": "41701",
                  "size": 4475,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": "46176",
              "size": 3024,
            },
            "license.md": {
              "offset": "49200",
              "size": 1079,
            },
            "package.json": {
              "offset": "50279",
              "size": 497,
            },
          },
        },
        "node-addon-api": {
          "files": {
            "LICENSE.md": {
              "offset": "50776",
              "size": 1150,
            },
            "common.gypi": {
              "offset": "51926",
              "size": 724,
            },
            "except.gypi": {
              "offset": "52650",
              "size": 560,
            },
            "index.js": {
              "offset": "53210",
              "size": 377,
            },
            "napi-inl.deprecated.h": {
              "offset": "53587",
              "size": 6323,
            },
            "napi-inl.h": {
              "offset": "59910",
              "size": 219411,
            },
            "napi.h": {
              "offset": "279321",
              "size": 115423,
            },
            "node_addon_api.gyp": {
              "offset": "394744",
              "size": 793,
            },
            "node_api.gyp": {
              "offset": "395537",
              "size": 132,
            },
            "noexcept.gypi": {
              "offset": "395669",
              "size": 639,
            },
            "nothing.c": {
              "offset": "396308",
              "size": 0,
            },
            "package-support.json": {
              "offset": "396308",
              "size": 467,
            },
            "package.json": {
              "offset": "396775",
              "size": 928,
            },
            "tools": {
              "files": {
                "README.md": {
                  "offset": "397703",
                  "size": 3217,
                },
                "check-napi.js": {
                  "offset": "400920",
                  "size": 3176,
                },
                "clang-format.js": {
                  "offset": "404096",
                  "size": 2002,
                },
                "conversion.js": {
                  "executable": true,
                  "offset": "406098",
                  "size": 15013,
                },
                "eslint-format.js": {
                  "offset": "421111",
                  "size": 2071,
                },
              },
            },
          },
        },
        "node-pty": {
          "files": {
            "LICENSE": {
              "size": 3326,
              "unpacked": true,
            },
            "build": {
              "files": {
                "Release": {
                  "files": {
                    "node-addon-api": {
                      "files": {
                        "node_addon_api_except.stamp": {
                          "size": 0,
                          "unpacked": true,
                        },
                      },
                      "unpacked": true,
                    },
                    "pty.node": {
                      "size": 76144,
                      "unpacked": true,
                    },
                  },
                  "unpacked": true,
                },
              },
              "unpacked": true,
            },
            "deps": {
              "files": {
                ".editorconfig": {
                  "size": 55,
                  "unpacked": true,
                },
                "winpty": {
                  "files": {
                    ".drone.yml": {
                      "size": 439,
                      "unpacked": true,
                    },
                    "LICENSE": {
                      "size": 1085,
                      "unpacked": true,
                    },
                    "Makefile": {
                      "size": 4722,
                      "unpacked": true,
                    },
                    "README.md": {
                      "size": 5551,
                      "unpacked": true,
                    },
                    "RELEASES.md": {
                      "size": 13667,
                      "unpacked": true,
                    },
                    "VERSION.txt": {
                      "size": 10,
                      "unpacked": true,
                    },
                    "configure": {
                      "size": 6478,
                      "unpacked": true,
                    },
                    "misc": {
                      "files": {
                        "ConinMode.ps1": {
                          "size": 3228,
                          "unpacked": true,
                        },
                        "DebugClient.py": {
                          "size": 1558,
                          "unpacked": true,
                        },
                        "DebugServer.py": {
                          "size": 2396,
                          "unpacked": true,
                        },
                        "DumpLines.py": {
                          "size": 97,
                          "unpacked": true,
                        },
                        "EnableExtendedFlags.txt": {
                          "size": 1974,
                          "unpacked": true,
                        },
                        "Font-Report-June2016": {
                          "files": {
                            "CP437-Consolas.txt": {
                              "size": 16408,
                              "unpacked": true,
                            },
                            "CP437-Lucida.txt": {
                              "size": 19641,
                              "unpacked": true,
                            },
                            "CP932.txt": {
                              "size": 19593,
                              "unpacked": true,
                            },
                            "CP936.txt": {
                              "size": 19650,
                              "unpacked": true,
                            },
                            "CP949.txt": {
                              "size": 19588,
                              "unpacked": true,
                            },
                            "CP950.txt": {
                              "size": 19656,
                              "unpacked": true,
                            },
                            "MinimumWindowWidths.txt": {
                              "size": 870,
                              "unpacked": true,
                            },
                            "Results.txt": {
                              "size": 147,
                              "unpacked": true,
                            },
                            "Windows10SetFontBugginess.txt": {
                              "size": 7851,
                              "unpacked": true,
                            },
                          },
                          "unpacked": true,
                        },
                        "FormatChar.h": {
                          "size": 529,
                          "unpacked": true,
                        },
                        "IdentifyConsoleWindow.ps1": {
                          "size": 1952,
                          "unpacked": true,
                        },
                        "MouseInputNotes.txt": {
                          "size": 4325,
                          "unpacked": true,
                        },
                        "Notes.txt": {
                          "size": 9856,
                          "unpacked": true,
                        },
                        "Spew.py": {
                          "size": 65,
                          "unpacked": true,
                        },
                        "build32.sh": {
                          "size": 213,
                          "unpacked": true,
                        },
                        "build64.sh": {
                          "size": 217,
                          "unpacked": true,
                        },
                        "color-test.sh": {
                          "size": 6068,
                          "unpacked": true,
                        },
                        "font-notes.txt": {
                          "size": 14988,
                          "unpacked": true,
                        },
                      },
                      "unpacked": true,
                    },
                    "ship": {
                      "files": {
                        "build-pty4j-libpty.bat": {
                          "size": 1230,
                          "unpacked": true,
                        },
                        "common_ship.py": {
                          "size": 1698,
                          "unpacked": true,
                        },
                        "make_msvc_package.py": {
                          "size": 5415,
                          "unpacked": true,
                        },
                        "ship.py": {
                          "size": 4022,
                          "unpacked": true,
                        },
                      },
                      "unpacked": true,
                    },
                    "src": {
                      "files": {
                        "agent": {
                          "files": {
                            "Agent.h": {
                              "size": 3520,
                              "unpacked": true,
                            },
                            "AgentCreateDesktop.h": {
                              "size": 1283,
                              "unpacked": true,
                            },
                            "ConsoleFont.h": {
                              "size": 1266,
                              "unpacked": true,
                            },
                            "ConsoleInput.h": {
                              "size": 3950,
                              "unpacked": true,
                            },
                            "ConsoleInputReencoding.h": {
                              "size": 1444,
                              "unpacked": true,
                            },
                            "ConsoleLine.h": {
                              "size": 1524,
                              "unpacked": true,
                            },
                            "Coord.h": {
                              "size": 2204,
                              "unpacked": true,
                            },
                            "DebugShowInput.h": {
                              "size": 1434,
                              "unpacked": true,
                            },
                            "DefaultInputMap.h": {
                              "size": 1271,
                              "unpacked": true,
                            },
                            "DsrSender.h": {
                              "size": 1242,
                              "unpacked": true,
                            },
                            "EventLoop.h": {
                              "size": 1603,
                              "unpacked": true,
                            },
                            "InputMap.h": {
                              "size": 3369,
                              "unpacked": true,
                            },
                            "LargeConsoleRead.h": {
                              "size": 2411,
                              "unpacked": true,
                            },
                            "NamedPipe.h": {
                              "size": 4130,
                              "unpacked": true,
                            },
                            "Scraper.h": {
                              "size": 3760,
                              "unpacked": true,
                            },
                            "SimplePool.h": {
                              "size": 2365,
                              "unpacked": true,
                            },
                            "SmallRect.h": {
                              "size": 4437,
                              "unpacked": true,
                            },
                            "Terminal.h": {
                              "size": 2262,
                              "unpacked": true,
                            },
                            "UnicodeEncoding.h": {
                              "size": 5298,
                              "unpacked": true,
                            },
                            "Win32Console.h": {
                              "size": 2347,
                              "unpacked": true,
                            },
                            "Win32ConsoleBuffer.h": {
                              "size": 3244,
                              "unpacked": true,
                            },
                          },
                          "unpacked": true,
                        },
                        "configurations.gypi": {
                          "size": 2378,
                          "unpacked": true,
                        },
                        "include": {
                          "files": {
                            "winpty.h": {
                              "size": 9420,
                              "unpacked": true,
                            },
                            "winpty_constants.h": {
                              "size": 5697,
                              "unpacked": true,
                            },
                          },
                          "unpacked": true,
                        },
                        "libwinpty": {
                          "files": {
                            "AgentLocation.h": {
                              "size": 1278,
                              "unpacked": true,
                            },
                            "LibWinptyException.h": {
                              "size": 1961,
                              "unpacked": true,
                            },
                            "WinptyInternal.h": {
                              "size": 2379,
                              "unpacked": true,
                            },
                          },
                          "unpacked": true,
                        },
                        "shared": {
                          "files": {
                            "AgentMsg.h": {
                              "size": 1418,
                              "unpacked": true,
                            },
                            "BackgroundDesktop.h": {
                              "size": 2836,
                              "unpacked": true,
                            },
                            "Buffer.h": {
                              "size": 3376,
                              "unpacked": true,
                            },
                            "DebugClient.h": {
                              "size": 1696,
                              "unpacked": true,
                            },
                            "GenRandom.h": {
                              "size": 2015,
                              "unpacked": true,
                            },
                            "GetCommitHash.bat": {
                              "size": 274,
                              "unpacked": true,
                            },
                            "Mutex.h": {
                              "size": 2183,
                              "unpacked": true,
                            },
                            "OsModule.h": {
                              "size": 2282,
                              "unpacked": true,
                            },
                            "OwnedHandle.h": {
                              "size": 1870,
                              "unpacked": true,
                            },
                            "PrecompiledHeader.h": {
                              "size": 1528,
                              "unpacked": true,
                            },
                            "StringBuilder.h": {
                              "size": 8506,
                              "unpacked": true,
                            },
                            "StringUtil.h": {
                              "size": 2677,
                              "unpacked": true,
                            },
                            "TimeMeasurement.h": {
                              "size": 2171,
                              "unpacked": true,
                            },
                            "UnixCtrlChars.h": {
                              "size": 2019,
                              "unpacked": true,
                            },
                            "UpdateGenVersion.bat": {
                              "size": 578,
                              "unpacked": true,
                            },
                            "WindowsSecurity.h": {
                              "size": 3465,
                              "unpacked": true,
                            },
                            "WindowsVersion.h": {
                              "size": 1345,
                              "unpacked": true,
                            },
                            "WinptyAssert.h": {
                              "size": 2829,
                              "unpacked": true,
                            },
                            "WinptyException.h": {
                              "size": 1643,
                              "unpacked": true,
                            },
                            "WinptyVersion.h": {
                              "size": 1246,
                              "unpacked": true,
                            },
                            "winpty_snprintf.h": {
                              "size": 3668,
                              "unpacked": true,
                            },
                          },
                          "unpacked": true,
                        },
                        "unix-adapter": {
                          "files": {
                            "InputHandler.h": {
                              "size": 2058,
                              "unpacked": true,
                            },
                            "OutputHandler.h": {
                              "size": 1943,
                              "unpacked": true,
                            },
                            "Util.h": {
                              "size": 1410,
                              "unpacked": true,
                            },
                            "WakeupFd.h": {
                              "size": 1549,
                              "unpacked": true,
                            },
                          },
                          "unpacked": true,
                        },
                        "winpty.gyp": {
                          "size": 7684,
                          "unpacked": true,
                        },
                      },
                      "unpacked": true,
                    },
                    "vcbuild.bat": {
                      "size": 2425,
                      "unpacked": true,
                    },
                  },
                  "unpacked": true,
                },
              },
              "unpacked": true,
            },
            "lib": {
              "files": {
                "conpty_console_list_agent.js": {
                  "size": 775,
                  "unpacked": true,
                },
                "conpty_console_list_agent.js.map": {
                  "size": 564,
                  "unpacked": true,
                },
                "eventEmitter2.js": {
                  "size": 1600,
                  "unpacked": true,
                },
                "eventEmitter2.js.map": {
                  "size": 1155,
                  "unpacked": true,
                },
                "eventEmitter2.test.js": {
                  "size": 1266,
                  "unpacked": true,
                },
                "eventEmitter2.test.js.map": {
                  "size": 1396,
                  "unpacked": true,
                },
                "index.js": {
                  "size": 1972,
                  "unpacked": true,
                },
                "index.js.map": {
                  "size": 964,
                  "unpacked": true,
                },
                "interfaces.js": {
                  "size": 233,
                  "unpacked": true,
                },
                "interfaces.js.map": {
                  "size": 124,
                  "unpacked": true,
                },
                "shared": {
                  "files": {
                    "conout.js": {
                      "size": 348,
                      "unpacked": true,
                    },
                    "conout.js.map": {
                      "size": 204,
                      "unpacked": true,
                    },
                  },
                  "unpacked": true,
                },
                "terminal.js": {
                  "size": 7454,
                  "unpacked": true,
                },
                "terminal.js.map": {
                  "size": 5844,
                  "unpacked": true,
                },
                "terminal.test.js": {
                  "size": 6250,
                  "unpacked": true,
                },
                "terminal.test.js.map": {
                  "size": 4150,
                  "unpacked": true,
                },
                "testUtils.test.js": {
                  "size": 807,
                  "unpacked": true,
                },
                "testUtils.test.js.map": {
                  "size": 622,
                  "unpacked": true,
                },
                "types.js": {
                  "size": 228,
                  "unpacked": true,
                },
                "types.js.map": {
                  "size": 114,
                  "unpacked": true,
                },
                "unixTerminal.js": {
                  "size": 10231,
                  "unpacked": true,
                },
                "unixTerminal.js.map": {
                  "size": 7978,
                  "unpacked": true,
                },
                "unixTerminal.test.js": {
                  "size": 19444,
                  "unpacked": true,
                },
                "unixTerminal.test.js.map": {
                  "size": 11472,
                  "unpacked": true,
                },
                "utils.js": {
                  "size": 580,
                  "unpacked": true,
                },
                "utils.js.map": {
                  "size": 443,
                  "unpacked": true,
                },
                "windowsConoutConnection.js": {
                  "size": 6017,
                  "unpacked": true,
                },
                "windowsConoutConnection.js.map": {
                  "size": 1593,
                  "unpacked": true,
                },
                "windowsPtyAgent.js": {
                  "size": 12461,
                  "unpacked": true,
                },
                "windowsPtyAgent.js.map": {
                  "size": 8889,
                  "unpacked": true,
                },
                "windowsPtyAgent.test.js": {
                  "size": 4147,
                  "unpacked": true,
                },
                "windowsPtyAgent.test.js.map": {
                  "size": 2951,
                  "unpacked": true,
                },
                "windowsTerminal.js": {
                  "size": 7988,
                  "unpacked": true,
                },
                "windowsTerminal.js.map": {
                  "size": 5127,
                  "unpacked": true,
                },
                "windowsTerminal.test.js": {
                  "size": 9832,
                  "unpacked": true,
                },
                "windowsTerminal.test.js.map": {
                  "size": 8006,
                  "unpacked": true,
                },
                "worker": {
                  "files": {
                    "conoutSocketWorker.js": {
                      "size": 848,
                      "unpacked": true,
                    },
                    "conoutSocketWorker.js.map": {
                      "size": 638,
                      "unpacked": true,
                    },
                  },
                  "unpacked": true,
                },
              },
              "unpacked": true,
            },
            "node-addon-api": {
              "files": {
                "node_addon_api.Makefile": {
                  "size": 159,
                  "unpacked": true,
                },
              },
              "unpacked": true,
            },
            "package.json": {
              "size": 884,
              "unpacked": true,
            },
            "scripts": {
              "files": {
                "post-install.js": {
                  "size": 1213,
                  "unpacked": true,
                },
                "publish.js": {
                  "size": 2369,
                  "unpacked": true,
                },
              },
              "unpacked": true,
            },
            "src": {
              "files": {
                "conpty_console_list_agent.ts": {
                  "size": 696,
                  "unpacked": true,
                },
                "eventEmitter2.test.ts": {
                  "size": 975,
                  "unpacked": true,
                },
                "eventEmitter2.ts": {
                  "size": 1111,
                  "unpacked": true,
                },
                "index.ts": {
                  "size": 2115,
                  "unpacked": true,
                },
                "interfaces.ts": {
                  "size": 2845,
                  "unpacked": true,
                },
                "shared": {
                  "files": {
                    "conout.ts": {
                      "size": 291,
                      "unpacked": true,
                    },
                  },
                  "unpacked": true,
                },
                "terminal.test.ts": {
                  "size": 4346,
                  "unpacked": true,
                },
                "terminal.ts": {
                  "size": 6665,
                  "unpacked": true,
                },
                "testUtils.test.ts": {
                  "size": 567,
                  "unpacked": true,
                },
                "tsconfig.json": {
                  "size": 323,
                  "unpacked": true,
                },
                "types.ts": {
                  "size": 306,
                  "unpacked": true,
                },
                "unixTerminal.test.ts": {
                  "size": 13205,
                  "unpacked": true,
                },
                "unixTerminal.ts": {
                  "size": 8195,
                  "unpacked": true,
                },
                "utils.ts": {
                  "size": 292,
                  "unpacked": true,
                },
                "win": {
                  "files": {
                    "path_util.h": {
                      "size": 695,
                      "unpacked": true,
                    },
                  },
                  "unpacked": true,
                },
                "windowsConoutConnection.ts": {
                  "size": 2683,
                  "unpacked": true,
                },
                "windowsPtyAgent.test.ts": {
                  "size": 3419,
                  "unpacked": true,
                },
                "windowsPtyAgent.ts": {
                  "size": 10359,
                  "unpacked": true,
                },
                "windowsTerminal.test.ts": {
                  "size": 7551,
                  "unpacked": true,
                },
                "windowsTerminal.ts": {
                  "size": 5784,
                  "unpacked": true,
                },
                "worker": {
                  "files": {
                    "conoutSocketWorker.ts": {
                      "size": 724,
                      "unpacked": true,
                    },
                  },
                  "unpacked": true,
                },
              },
              "unpacked": true,
            },
          },
          "unpacked": true,
        },
      },
    },
    "package.json": {
      "offset": "426524",
      "size": 266,
    },
  },
}
`;

exports[`yarn workspace 1`] = `
{
  "linux": [],
}
`;

exports[`yarn workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": "137310",
      "size": 841,
    },
    "index.js": {
      "offset": "138151",
      "size": 2501,
    },
    "node_modules": {
      "files": {
        "@sentry": {
          "files": {
            "core": {
              "files": {
                "LICENSE": {
                  "offset": "0",
                  "size": 1527,
                },
                "dist": {
                  "files": {
                    "base.js": {
                      "offset": "1527",
                      "size": 17489,
                    },
                    "base.js.map": {
                      "offset": "19016",
                      "size": 16432,
                    },
                    "dsn.js": {
                      "offset": "35448",
                      "size": 4214,
                    },
                    "dsn.js.map": {
                      "offset": "39662",
                      "size": 5742,
                    },
                    "error.js": {
                      "offset": "45404",
                      "size": 1180,
                    },
                    "error.js.map": {
                      "offset": "46584",
                      "size": 844,
                    },
                    "index.js": {
                      "offset": "47428",
                      "size": 475,
                    },
                    "index.js.map": {
                      "offset": "47903",
                      "size": 589,
                    },
                    "interfaces.js": {
                      "offset": "48492",
                      "size": 649,
                    },
                    "interfaces.js.map": {
                      "offset": "49141",
                      "size": 11257,
                    },
                    "sdk.js": {
                      "offset": "60398",
                      "size": 1039,
                    },
                    "sdk.js.map": {
                      "offset": "61437",
                      "size": 1554,
                    },
                    "status.js": {
                      "offset": "62991",
                      "size": 1630,
                    },
                    "status.js.map": {
                      "offset": "64621",
                      "size": 2118,
                    },
                  },
                },
                "package.json": {
                  "offset": "66739",
                  "size": 766,
                },
              },
            },
            "shim": {
              "files": {
                "LICENSE": {
                  "offset": "67505",
                  "size": 1527,
                },
                "dist": {
                  "files": {
                    "domain.js": {
                      "offset": "69032",
                      "size": 672,
                    },
                    "domain.js.map": {
                      "offset": "69704",
                      "size": 1230,
                    },
                    "global.js": {
                      "offset": "70934",
                      "size": 500,
                    },
                    "global.js.map": {
                      "offset": "71434",
                      "size": 906,
                    },
                    "index.js": {
                      "offset": "72340",
                      "size": 826,
                    },
                    "index.js.map": {
                      "offset": "73166",
                      "size": 920,
                    },
                    "interfaces.js": {
                      "offset": "74086",
                      "size": 115,
                    },
                    "interfaces.js.map": {
                      "offset": "74201",
                      "size": 501,
                    },
                    "models.js": {
                      "offset": "74702",
                      "size": 522,
                    },
                    "models.js.map": {
                      "offset": "75224",
                      "size": 2711,
                    },
                    "sdk.js": {
                      "offset": "77935",
                      "size": 7245,
                    },
                    "sdk.js.map": {
                      "offset": "85180",
                      "size": 10056,
                    },
                    "shim.js": {
                      "offset": "95236",
                      "size": 4438,
                    },
                    "shim.js.map": {
                      "offset": "99674",
                      "size": 6607,
                    },
                  },
                },
                "jest.config.js": {
                  "offset": "106281",
                  "size": 265,
                },
                "package.json": {
                  "offset": "106546",
                  "size": 705,
                },
                "src": {
                  "files": {
                    "domain.ts": {
                      "offset": "107251",
                      "size": 630,
                    },
                    "global.ts": {
                      "offset": "107881",
                      "size": 510,
                    },
                    "index.ts": {
                      "offset": "108391",
                      "size": 421,
                    },
                    "interfaces.ts": {
                      "offset": "108812",
                      "size": 352,
                    },
                    "models.ts": {
                      "offset": "109164",
                      "size": 2213,
                    },
                    "sdk.ts": {
                      "offset": "111377",
                      "size": 6858,
                    },
                    "shim.ts": {
                      "offset": "118235",
                      "size": 3831,
                    },
                  },
                },
                "tsconfig.build.json": {
                  "offset": "122066",
                  "size": 160,
                },
                "tsconfig.json": {
                  "offset": "122226",
                  "size": 244,
                },
                "tslint.json": {
                  "offset": "122470",
                  "size": 90,
                },
              },
            },
          },
        },
        "electron-log": {
          "files": {
            "LICENSE": {
              "offset": "122560",
              "size": 1082,
            },
            "index.js": {
              "offset": "123642",
              "size": 140,
            },
            "lib": {
              "files": {
                "format.js": {
                  "offset": "123782",
                  "size": 1021,
                },
                "log.js": {
                  "offset": "124803",
                  "size": 877,
                },
                "transports": {
                  "files": {
                    "console.js": {
                      "offset": "125680",
                      "size": 343,
                    },
                    "file": {
                      "files": {
                        "find-log-path.js": {
                          "offset": "126023",
                          "size": 2078,
                        },
                        "get-app-name.js": {
                          "offset": "128101",
                          "size": 1780,
                        },
                        "index.js": {
                          "offset": "129881",
                          "size": 2068,
                        },
                      },
                    },
                    "log-s.js": {
                      "offset": "131949",
                      "size": 1751,
                    },
                    "renderer-console.js": {
                      "offset": "133700",
                      "size": 544,
                    },
                  },
                },
              },
            },
            "main.js": {
              "offset": "134244",
              "size": 1343,
            },
            "package.json": {
              "offset": "135587",
              "size": 745,
            },
            "renderer.js": {
              "offset": "136332",
              "size": 978,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "140652",
      "size": 380,
    },
  },
}
`;
